--- a/OpticalValleyUnite/Classes/UI/DecorationAdmin/View/YQDecorationHomeCell.xib
+++ b/OpticalValleyUnite/Classes/UI/DecorationAdmin/View/YQDecorationHomeCell.xib
@@ -11,36 +11,42 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="182" id="KGk-i7-Jjw" customClass="YQDecorationHomeCell" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="436" height="182"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="decorationHomeCell" rowHeight="197" id="KGk-i7-Jjw" customClass="YQDecorationHomeCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="531" height="197"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="436" height="181.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="531" height="196.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zVC-yB-ijh">
-                        <rect key="frame" x="0.0" y="0.0" width="436" height="45"/>
+                        <rect key="frame" x="0.0" y="8" width="531" height="40"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MgS-lN-4eh">
-                                <rect key="frame" x="15" y="0.0" width="45" height="45"/>
+                                <rect key="frame" x="15" y="0.0" width="40" height="40"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="45" id="20F-TH-tuB"/>
+                                    <constraint firstAttribute="width" constant="40" id="20F-TH-tuB"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bia-Ml-TbX">
-                                <rect key="frame" x="15" y="12" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bia-Ml-TbX">
+                                <rect key="frame" x="14" y="9.5" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iQa-6f-RhH">
-                                <rect key="frame" x="65" y="13" width="39.5" height="19.5"/>
+                                <rect key="frame" x="60" y="10.5" width="404" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a4G-tH-CI4">
-                                <rect key="frame" x="371" y="8" width="60" height="30"/>
+                                <rect key="frame" x="466" y="5.5" width="60" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="ie5-80-gYb"/>
                                     <constraint firstAttribute="width" constant="60" id="x9Q-oo-LOV"/>
@@ -65,42 +71,43 @@
                         <constraints>
                             <constraint firstItem="iQa-6f-RhH" firstAttribute="leading" secondItem="MgS-lN-4eh" secondAttribute="trailing" constant="5" id="5fQ-9j-9UJ"/>
                             <constraint firstItem="MgS-lN-4eh" firstAttribute="leading" secondItem="zVC-yB-ijh" secondAttribute="leading" constant="15" id="P7w-Ue-PDU"/>
-                            <constraint firstItem="Bia-Ml-TbX" firstAttribute="leading" secondItem="MgS-lN-4eh" secondAttribute="leading" id="QyR-rs-CJa"/>
-                            <constraint firstAttribute="height" constant="45" id="TFj-jh-6Ya"/>
+                            <constraint firstAttribute="height" constant="40" id="TFj-jh-6Ya"/>
                             <constraint firstAttribute="bottom" secondItem="MgS-lN-4eh" secondAttribute="bottom" id="WtG-zM-hRS"/>
                             <constraint firstItem="iQa-6f-RhH" firstAttribute="centerY" secondItem="zVC-yB-ijh" secondAttribute="centerY" id="d1a-jf-emW"/>
                             <constraint firstItem="Bia-Ml-TbX" firstAttribute="centerY" secondItem="zVC-yB-ijh" secondAttribute="centerY" id="dRq-c7-mOZ"/>
+                            <constraint firstItem="Bia-Ml-TbX" firstAttribute="centerX" secondItem="MgS-lN-4eh" secondAttribute="centerX" id="eyh-U0-POq"/>
+                            <constraint firstItem="a4G-tH-CI4" firstAttribute="leading" secondItem="iQa-6f-RhH" secondAttribute="trailing" constant="2" id="kWh-ZY-O8V"/>
                             <constraint firstItem="MgS-lN-4eh" firstAttribute="top" secondItem="zVC-yB-ijh" secondAttribute="top" id="mOg-Gx-baH"/>
                             <constraint firstItem="a4G-tH-CI4" firstAttribute="centerY" secondItem="zVC-yB-ijh" secondAttribute="centerY" id="pAU-06-xqf"/>
                             <constraint firstAttribute="trailing" secondItem="a4G-tH-CI4" secondAttribute="trailing" constant="5" id="wix-6B-xjU"/>
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j7o-K1-Lsq">
-                        <rect key="frame" x="5" y="45" width="431" height="1"/>
-                        <color key="backgroundColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="5" y="48" width="521" height="1"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="lMZ-2N-VKh"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7wT-Xx-5Q8">
-                        <rect key="frame" x="5" y="140.5" width="426" height="1"/>
-                        <color key="backgroundColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="5" y="155.5" width="521" height="1"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="Izd-Dq-Aqd"/>
                             <constraint firstAttribute="height" constant="1" id="SQJ-Wu-KVo"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LKl-5x-Fjx">
-                        <rect key="frame" x="0.0" y="46" width="436" height="94.5"/>
+                        <rect key="frame" x="0.0" y="49" width="531" height="106.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ihd-1o-dsq">
-                                <rect key="frame" x="5" y="73.5" width="426" height="21"/>
+                                <rect key="frame" x="5" y="85.5" width="521" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="工单描述" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Qd0-y2-9Zt">
-                                <rect key="frame" x="5" y="0.0" width="426" height="73.5"/>
+                                <rect key="frame" x="5" y="0.0" width="521" height="85.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -119,7 +126,7 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OaL-YT-FBc">
-                        <rect key="frame" x="0.0" y="141.5" width="436" height="40"/>
+                        <rect key="frame" x="0.0" y="156.5" width="531" height="40"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KZI-cE-Ge7">
                                 <rect key="frame" x="5" y="9" width="42" height="21"/>
@@ -128,7 +135,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WEx-Hs-ccH">
-                                <rect key="frame" x="389" y="9.5" width="42" height="21"/>
+                                <rect key="frame" x="484" y="9.5" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -143,24 +150,32 @@
                             <constraint firstItem="WEx-Hs-ccH" firstAttribute="centerY" secondItem="OaL-YT-FBc" secondAttribute="centerY" id="wYN-LT-sMy"/>
                         </constraints>
                     </view>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LZu-Vn-skE">
+                        <rect key="frame" x="0.0" y="0.0" width="531" height="8"/>
+                        <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="zVC-yB-ijh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="57C-bq-JqC"/>
                     <constraint firstAttribute="trailing" secondItem="LKl-5x-Fjx" secondAttribute="trailing" id="7B8-nZ-6dz"/>
                     <constraint firstItem="7wT-Xx-5Q8" firstAttribute="top" secondItem="LKl-5x-Fjx" secondAttribute="bottom" id="DO2-eh-65Y"/>
+                    <constraint firstItem="zVC-yB-ijh" firstAttribute="top" secondItem="LZu-Vn-skE" secondAttribute="bottom" id="EPN-ng-Lf7"/>
                     <constraint firstItem="LKl-5x-Fjx" firstAttribute="top" secondItem="j7o-K1-Lsq" secondAttribute="bottom" id="FLd-zz-DKH"/>
                     <constraint firstItem="LKl-5x-Fjx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="FhQ-DN-dFa"/>
                     <constraint firstAttribute="bottom" secondItem="OaL-YT-FBc" secondAttribute="bottom" id="GV1-Lw-xa4"/>
                     <constraint firstItem="OaL-YT-FBc" firstAttribute="top" secondItem="7wT-Xx-5Q8" secondAttribute="bottom" id="JmP-eN-Cll"/>
+                    <constraint firstItem="LZu-Vn-skE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="JoC-xT-tfM"/>
                     <constraint firstAttribute="trailing" secondItem="7wT-Xx-5Q8" secondAttribute="trailing" constant="5" id="JwI-Eq-YR9"/>
                     <constraint firstAttribute="trailing" secondItem="OaL-YT-FBc" secondAttribute="trailing" id="KdX-RE-HZW"/>
                     <constraint firstItem="j7o-K1-Lsq" firstAttribute="top" secondItem="zVC-yB-ijh" secondAttribute="bottom" id="OpQ-Nm-Xmn"/>
                     <constraint firstItem="j7o-K1-Lsq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="Srr-Vy-PED"/>
+                    <constraint firstItem="LZu-Vn-skE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="VwI-ot-2l1"/>
                     <constraint firstItem="OaL-YT-FBc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Wfb-sU-GlP"/>
-                    <constraint firstItem="zVC-yB-ijh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ehd-Vo-pGB"/>
+                    <constraint firstItem="zVC-yB-ijh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="ehd-Vo-pGB"/>
                     <constraint firstItem="7wT-Xx-5Q8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="hml-Fa-bNd"/>
-                    <constraint firstAttribute="trailing" secondItem="j7o-K1-Lsq" secondAttribute="trailing" id="jcF-qQ-6Dw"/>
+                    <constraint firstAttribute="trailing" secondItem="j7o-K1-Lsq" secondAttribute="trailing" constant="5" id="jcF-qQ-6Dw"/>
                     <constraint firstAttribute="trailing" secondItem="zVC-yB-ijh" secondAttribute="trailing" id="m8C-Gw-GbQ"/>
+                    <constraint firstAttribute="trailing" secondItem="LZu-Vn-skE" secondAttribute="trailing" id="r0J-lU-kqo"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -172,7 +187,7 @@
                 <outlet property="workStateLabel" destination="a4G-tH-CI4" id="K4P-m5-94v"/>
                 <outlet property="workTypeLabel" destination="Bia-Ml-TbX" id="QKJ-es-rhe"/>
             </connections>
-            <point key="canvasLocation" x="83" y="121"/>
+            <point key="canvasLocation" x="130.5" y="128.5"/>
         </tableViewCell>
     </objects>
 </document>
