--- a/OpticalValleyUnite/Classes/UI/HouseQuery/ViewController/YQHouseHome.storyboard
+++ b/OpticalValleyUnite/Classes/UI/HouseQuery/ViewController/YQHouseHome.storyboard
@@ -21,9 +21,126 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YD0-zP-JVZ">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="176" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YD0-zP-JVZ">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="houseHomeCell" rowHeight="176" id="Hry-fY-JJf" customClass="YQHouseHomeCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="176"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hry-fY-JJf" id="iSC-Kp-RtP">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="175.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="房间名称:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GbX-rZ-saN">
+                                                    <rect key="frame" x="10" y="5" width="65" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="65" id="lBp-tp-42t"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="房间名称:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w1L-bH-zoi">
+                                                    <rect key="frame" x="85" y="5" width="285" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="房间名称:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YWj-hB-9a9">
+                                                    <rect key="frame" x="85" y="32" width="285" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="房间名称:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qFR-ca-d9Y">
+                                                    <rect key="frame" x="85" y="74" width="285" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="房间名称:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eba-Zc-SuM">
+                                                    <rect key="frame" x="85" y="101" width="285" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="房间名称:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EC9-ed-ydK">
+                                                    <rect key="frame" x="85" y="128" width="285" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="房间号:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRF-pr-BE5">
+                                                    <rect key="frame" x="10" y="32" width="65" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="业主姓名:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bOQ-Lr-ZMP">
+                                                    <rect key="frame" x="10" y="74" width="65" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="业主地址:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NqA-Gm-cuK">
+                                                    <rect key="frame" x="10" y="128" width="65" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="业主电话:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PxQ-KS-UcC">
+                                                    <rect key="frame" x="10" y="101" width="65" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="EC9-ed-ydK" firstAttribute="leading" secondItem="qFR-ca-d9Y" secondAttribute="leading" id="3r8-SA-b6k"/>
+                                                <constraint firstItem="EC9-ed-ydK" firstAttribute="centerY" secondItem="NqA-Gm-cuK" secondAttribute="centerY" id="A2k-q1-z5m"/>
+                                                <constraint firstItem="eba-Zc-SuM" firstAttribute="top" secondItem="qFR-ca-d9Y" secondAttribute="bottom" constant="10" id="BwR-Ij-fz8"/>
+                                                <constraint firstAttribute="trailing" secondItem="qFR-ca-d9Y" secondAttribute="trailing" constant="5" id="Dh7-i5-0l6"/>
+                                                <constraint firstItem="NqA-Gm-cuK" firstAttribute="leading" secondItem="GbX-rZ-saN" secondAttribute="leading" id="EZd-3w-gjl"/>
+                                                <constraint firstAttribute="trailing" secondItem="eba-Zc-SuM" secondAttribute="trailing" constant="5" id="FWD-Bo-q7g"/>
+                                                <constraint firstItem="bOQ-Lr-ZMP" firstAttribute="leading" secondItem="GbX-rZ-saN" secondAttribute="leading" id="Gff-K6-em4"/>
+                                                <constraint firstItem="bOQ-Lr-ZMP" firstAttribute="width" secondItem="GbX-rZ-saN" secondAttribute="width" id="HzT-Se-F5L"/>
+                                                <constraint firstAttribute="trailing" secondItem="YWj-hB-9a9" secondAttribute="trailing" constant="5" id="NNl-iV-HyA"/>
+                                                <constraint firstItem="YWj-hB-9a9" firstAttribute="leading" secondItem="w1L-bH-zoi" secondAttribute="leading" id="PyJ-C8-u9o"/>
+                                                <constraint firstItem="w1L-bH-zoi" firstAttribute="top" secondItem="iSC-Kp-RtP" secondAttribute="top" constant="5" id="TvV-Mr-gwE"/>
+                                                <constraint firstItem="dRF-pr-BE5" firstAttribute="width" secondItem="GbX-rZ-saN" secondAttribute="width" id="UPG-Q4-wgh"/>
+                                                <constraint firstItem="PxQ-KS-UcC" firstAttribute="width" secondItem="GbX-rZ-saN" secondAttribute="width" id="W1z-hE-x8b"/>
+                                                <constraint firstAttribute="trailing" secondItem="w1L-bH-zoi" secondAttribute="trailing" constant="5" id="aDS-P1-8a2"/>
+                                                <constraint firstItem="eba-Zc-SuM" firstAttribute="centerY" secondItem="PxQ-KS-UcC" secondAttribute="centerY" id="drf-zP-Qgg"/>
+                                                <constraint firstItem="w1L-bH-zoi" firstAttribute="leading" secondItem="GbX-rZ-saN" secondAttribute="trailing" constant="10" id="evb-rY-KAx"/>
+                                                <constraint firstItem="qFR-ca-d9Y" firstAttribute="centerY" secondItem="bOQ-Lr-ZMP" secondAttribute="centerY" id="fRn-1s-T1t"/>
+                                                <constraint firstItem="qFR-ca-d9Y" firstAttribute="top" secondItem="YWj-hB-9a9" secondAttribute="bottom" constant="25" id="fWe-VB-f7C"/>
+                                                <constraint firstItem="eba-Zc-SuM" firstAttribute="leading" secondItem="qFR-ca-d9Y" secondAttribute="leading" id="fgs-y9-qzM"/>
+                                                <constraint firstItem="YWj-hB-9a9" firstAttribute="centerY" secondItem="dRF-pr-BE5" secondAttribute="centerY" id="iF8-O6-Cpf"/>
+                                                <constraint firstItem="qFR-ca-d9Y" firstAttribute="leading" secondItem="w1L-bH-zoi" secondAttribute="leading" id="ib3-Eb-jSb"/>
+                                                <constraint firstItem="dRF-pr-BE5" firstAttribute="leading" secondItem="GbX-rZ-saN" secondAttribute="leading" id="nmv-Kf-1nK"/>
+                                                <constraint firstItem="EC9-ed-ydK" firstAttribute="top" secondItem="eba-Zc-SuM" secondAttribute="bottom" constant="10" id="sDD-Jj-vZ2"/>
+                                                <constraint firstAttribute="trailing" secondItem="EC9-ed-ydK" secondAttribute="trailing" constant="5" id="uzi-24-GWd"/>
+                                                <constraint firstItem="NqA-Gm-cuK" firstAttribute="width" secondItem="GbX-rZ-saN" secondAttribute="width" id="waZ-wV-hzj"/>
+                                                <constraint firstItem="w1L-bH-zoi" firstAttribute="centerY" secondItem="GbX-rZ-saN" secondAttribute="centerY" id="wlg-Ky-rcT"/>
+                                                <constraint firstItem="YWj-hB-9a9" firstAttribute="top" secondItem="w1L-bH-zoi" secondAttribute="bottom" constant="10" id="yZP-UZ-1Kb"/>
+                                                <constraint firstItem="PxQ-KS-UcC" firstAttribute="leading" secondItem="GbX-rZ-saN" secondAttribute="leading" id="z3b-6d-xzN"/>
+                                                <constraint firstItem="GbX-rZ-saN" firstAttribute="leading" secondItem="iSC-Kp-RtP" secondAttribute="leading" constant="10" id="zly-et-JH1"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="houseNameLabel" destination="w1L-bH-zoi" id="nJZ-6I-Bht"/>
+                                            <outlet property="houseNum" destination="YWj-hB-9a9" id="mqI-V5-s2m"/>
+                                            <outlet property="owerAdressLabel" destination="EC9-ed-ydK" id="QOt-cE-XEK"/>
+                                            <outlet property="ownerNameLabel" destination="qFR-ca-d9Y" id="QJj-fN-DWz"/>
+                                            <outlet property="ownerPhoneLabel" destination="eba-Zc-SuM" id="VAW-sK-yZT"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="LvF-Sb-brf" id="E02-hb-K8z"/>
+                                    <outlet property="delegate" destination="LvF-Sb-brf" id="NgH-lh-Y33"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -40,7 +157,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nKV-44-mkG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-431" y="37"/>
+            <point key="canvasLocation" x="-463" y="0.0"/>
         </scene>
     </scenes>
 </document>
